--- a/style.css
+++ b/style.css
@@ -189,8 +189,17 @@ a img {
 
 /* PAGINA SOBRE */
 .banner {
+ 
   text-align: center;
   padding: 16px 18px;
+}
+
+
+
+.txt img {
+  padding-left: 665px;
+text-align: center;
+margin: auto;
 }
 
 .txt-sobre h2 {
@@ -468,6 +477,7 @@ main .container {
 
 /* PAGINA FALE CONOSCO */
 
+
 .hablar {
   display: flex;
   justify-content: space-around;
@@ -493,6 +503,21 @@ main .container {
 .cont .informacao i {
   font-size: 70px;
 }
+
+.frase h2{
+  text-align: center;
+  width: 1300px; 
+  font-size: 40px;
+  color: white;
+
+  padding-top: 100px;
+  padding-bottom: 100px;
+margin: auto;
+}
+
+  .maps iframe{
+    width: 99.2vw;
+  }
 
 /* FOOTER */
 footer {
